# wizard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  build_linux.sh  build_windows_mingw.bat
include/: pilot.h  scenes.h  udp.h  wizard.h
src/: main.cpp  pilot.cpp  udp.cpp  wizard.cpp
